control-plane/gateway07/gateway-api-0.7.1-custom/conformance/tests/httproute-rewrite-path.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: rewrite-path
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /prefix/one
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /one
    backendRefs:
    - name: infra-backend-v1
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /full/one
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplaceFullPath
          replaceFullPath: /one
    backendRefs:
    - name: infra-backend-v1
      port: 8080
